# graphic_demo

./: README.md
.github/workflows/: anchore-analysis.yml
cross_platform_demo/: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  main_cv.cpp  main_gl.cpp  main_mtl.cpp  main_mtl.mm  main_vk.cpp
cross_platform_demo/configuration/: root_directory.h.in
cross_platform_demo/include/: base.h
cross_platform_demo/include/common/: fileSystem.h  shaderUtil.h
cross_platform_demo/include/core/: context_mtl.h  context_vk.h
cross_platform_demo/include/utils/: basic_timer.h
cross_platform_demo/resources/shaders/: animation.frag  animation.vert  cube.frag  cube.vert  fragShader.glsl  instancing.frag  instancing.vert  point.gl.vert  sharing.gl.frag  sharing.gl.vert  texture.gl.frag  texture.gl.vert  triangle.gl.frag  triangle.gl.vert  vertShader.glsl
cross_platform_demo/resources/shaders/GouraudShaders/: fragShader.glsl
cross_platform_demo/src/common/: commonInterface.cpp  commonInterface.h  fileSystem.cpp  fileSystem.h  program.cpp  program.h  shaderUtil.cpp
cross_platform_demo/src/core/: context_gl.cpp  context_gl.h  context_mtl.mm  context_vk.cpp
cross_platform_demo/src/core/vk/: commonDefine_vk.h  commonHandle_vk.h  context_vk.cpp  context_vk.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.cpp  descriptorSetLayout.h  device.cpp  device.h  device2.cpp  device2.h  deviceObject.cpp  deviceObject.h  framebuffer.cpp  framebuffer.h  imageView.cpp  imageView.h  instance.cpp  instance.h  instanceObject.cpp  instanceObject.h  layerAndExtension.cpp  layerAndExtension.h  physicalDevice.cpp  physicalDevice.h  physicalDeviceObject.cpp  physicalDeviceObject.h  pipeline.cpp  pipeline.h  pipelineLayout.cpp  pipelineLayout.h  pipelineState.cpp  pipelineState.h  renderPass.cpp  renderPass.h  renderer.cpp  renderer.h  (+8 more)
cross_platform_demo/src/test/: triangleTestForglfw.cpp  triangleTestForglfw.h  triangleVk.cpp  triangleVk.h  vulkanApplication.cpp  vulkanApplication.h  vulkanApplications.cpp  vulkanApplications.h  vulkanDevice.cpp  vulkanDevice.h  vulkanInstance.cpp  vulkanInstance.h  vulkanLayerExternsionDefine.cpp  vulkanLayerExternsionDefine.h
cross_platform_demo/src/utils/: ImportedModel.h  base.h  logger.cpp  logger.h  sphere.cpp  sphere.h  torus.cpp  torus.h  utils.cpp  utils.h
cross_platform_demo/test/gl/: animation.cpp  animation.h  background.cpp  background.h  cube.cpp  cube.h  instancing.cpp  instancing.h  point.cpp  point.h  sharing.cpp  sharing.h  showGLInfo.cpp  showGLInfo.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
cross_platform_demo/test/vk/: triangle.cpp  triangle.h
metal_demo/metal_demo/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  ViewController.mm  main.m
metal_demo/metal_demo.xcodeproj/: project.pbxproj
metal_demo/metal_demo/Base.lproj/: Main.storyboard
metal_demo/metal_demo/Rendering/: CGRenderer.h  CGRenderer.m  CGShaderTypes.h  CGShaders..metal
metal_demo/metal_demoTests/: metal_demoTests.m
metal_demo/metal_demoUITests/: metal_demoUITests.m
metal_learning/metal_learning/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m  renderer.h  renderer.mm  shaderTypes.h  shaders.metal
metal_learning/metal_learning.xcodeproj/: project.pbxproj
metal_learning/metal_learning/Base.lproj/: Main.storyboard
opengl_demo/opengl_demo/: AppDelegate.h  AppDelegate.m  GLView.h  GLView.mm  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
opengl_demo/opengl_demo.xcodeproj/: project.pbxproj
opengl_demo/opengl_demo/Base.lproj/: Main.storyboard
opengl_demo/opengl_demo/shaders/: base.frag  base.vert
opengl_demo/opengl_demoTests/: opengl_demoTests.m
opengl_demo/opengl_demoUITests/: opengl_demoUITests.m
